# LEDVisualiserAudioClient

./: .gitignore  AudClient.cs  AudioClient.csproj  CMakeLists.txt  NetworkServer.cs  Program.cs  README.md  fft.c  fft.h  getDevices.c  getDevices.h  led.c  led.h  license.txt  main.c  run_leds.py
C Client/: main.c
C Client/Configs/: constants.h
C Client/FFT/: fft.c
C Client/LED/: led.c
Configs/: constants.h
FFT/: fft.c  fft.h
FFT Module/: fft.c  fft.h
FetchDevices/: getDevices.c
LED/: colour.c  colour.h  led.c  led.h
Network/: network.c  network.h
src/: Program.cs
src/Client/: AudClient.cs  LEDStrip.cs
src/Network/: NetClient.cs  NetworkServer.cs
src/Utility/: Colour.cs  ColourController.cs  ColourConvert.cs
